# s21_String

./: CMakeLists.txt  Makefile  a.out  errlist.h  errors_sprintf.txt  errors_sscanf.txt  extra.c  extra.h  main.c  new_errors_sscnanf.txt  s21_convert.c  s21_convert.h  s21_ideal_test.c  s21_other_sscanf.c  s21_parse.c  s21_parse.h  s21_sprintf.c  s21_sprintf.h  s21_sscanf.c  s21_sscanf.h  s21_string.c  s21_string.h  s21_test.c
islove/: a.out  s21_parse.h  s21_sprintf.c  s21_sprintf.h  s21_string.c
qtests/: test_sprintf1.c  test_sprintf2.c  test_sprintf_asterisk.c  test_sprintf_c.c  test_sprintf_d.c  test_sprintf_e.c  test_sprintf_f.c  test_sprintf_g.c  test_sprintf_hex.c  test_sprintf_hex2.c  test_sprintf_i.c  test_sprintf_n.c  test_sprintf_octal.c  test_sprintf_percent.c  test_sprintf_pointer.c  test_sprintf_string.c  test_sprintf_unsigned.c
string_functions/: s21_insert.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_memset.c  s21_strchr.c  s21_strcspn.c  s21_strerror.c  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strncpy.c  s21_strpbrk.c  s21_strrchr.c  s21_strspn.c  s21_strstr.c  s21_strtok.c  s21_to_lower.c  s21_to_upper.c  s21_trim.c
